# cpp-package-zoo

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: build.yml
001-fetch-content-zlib/: CMakeLists.txt
01-01-fetch-content-zlib/: CMakeLists.txt
01-cmake-fetchcontent-boost/: CMakeLists.txt  main.cpp
01-cmake-fetchcontent-zlib/: CMakeLists.txt
01-cmake-fetchcontent-zlib/src/: main.cpp  zipit.cpp  zipit.h
01-cmake-fetchcontent-zlib/tests/: zipit_tests.cpp
src/: zip_folder.cpp
tests/: zip_tests.cpp
